Closed Bug 1975983 Opened 2 months ago Closed 2 months ago

Architecture-riscv64: Wrong name for register fs1 in FloatRegisters::GetName

Categories

(Core :: JavaScript Engine: JIT, defect, P4)

defect

Tracking

()

RESOLVED FIXED
142 Branch
Tracking Status
firefox142 --- fixed

People

(Reporter: csmantle, Assigned: csmantle)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Assignee: nobody → webmaster
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Summary: Architecture-riscv64: wrong name for register fs1 in FloatRegisters::GetName → Architecture-riscv64: Wrong name for register fs1 in FloatRegisters::GetName
Blocks: sm-jits
Severity: -- → S3
Priority: -- → P4
Status: ASSIGNED → RESOLVED
Closed: 2 months ago
Resolution: --- → FIXED
Target Milestone: --- → 142 Branch
QA Whiteboard: [qa-triage-done-c143/b142]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: