Bug 1975983 - [riscv64] Fix typo in FloatRegisters::GetName: fs2 -> fs1. r=anba,jandem

Differential Revision: https://phabricator.services.mozilla.com/D256276